--- a/Developer/Views/Admin/AdminMenu.cshtml
+++ b/Developer/Views/Admin/AdminMenu.cshtml
@@ -1,11 +1,11 @@
 ﻿<div class="row">
-    <div class="col-md-3">
+    <div class="col-md-2">
         <button type="button" class="btn btn-success" style="width: 100%">
             <span class="glyphicon glyphicon-envelope"></span>
             <small>Wiadomości</small>
         </button>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-2">
         <div class="dropdown">
             <button class="btn btn-default btn-warning dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="true" style="width: 100%">
                 <span class="glyphicon glyphicon-user"></span>
@@ -19,7 +19,7 @@
             </ul>
         </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
         <div class="dropdown">
             <button class="btn btn-default btn-danger dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true" style="width: 100%">
                 <span class="glyphicon glyphicon-home"></span>
@@ -35,7 +35,13 @@
             </ul>
         </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-2">
+        <a role="button" class="btn btn-primary" style="width: 100%" href="/Admin/Offers">
+            <span class="glyphicon glyphicon-list-alt"></span>
+            <small>Oferty</small>
+        </a>
+    </div>
+    <div class="col-md-2">
         <a role="button" class="btn btn-info" style="width: 100%" href="/Admin/Photos">
                 <span class="glyphicon glyphicon-picture"></span>
                 <small>Zdjęcia</small>
