--- a/Developer/Views/Home/CreateOffer.cshtml
+++ b/Developer/Views/Home/CreateOffer.cshtml
@@ -72,17 +72,17 @@
                                     @Html.EditorFor(model => model.Price, new {htmlAttributes = new {@class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("Price") && ViewData.ModelState["Price"].Errors.Count > 0) ? ";border: 2px solid red" : "")}})
                                 </div>
                                 <div class="col-md-6">
-                                    <small>Email</small>
+                                    <small>Nieruchomość</small>
                                     @Html.EnumDropDownListFor(model => model.AdType, new {@class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("AdType") && ViewData.ModelState["AdType"].Errors.Count > 0) ? ";border: 2px solid red" : "")})
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <small>Imię i nazwisko</small>
+                                    <small>Miasto</small>
                                     @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("City") && ViewData.ModelState["City"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
                                 </div>
                                 <div class="col-md-6">
-                                    <small>Email</small>
+                                    <small>Lokalizacja</small>
                                     @Html.EditorFor(model => model.Location, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("Location") && ViewData.ModelState["Location"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
                                 </div>
                             </div>
