--- a/Developer/Views/Shared/_Layout.cshtml
+++ b/Developer/Views/Shared/_Layout.cshtml
@@ -19,7 +19,6 @@
                 <img src="~/Content/img/the-palace-of-culture.jpg" width="100%"/>
             </div>
             <div class="col-md-10">
-
                 <div class="col-md-6">
                     <div class="partner" style="font-style: italic; color: black; font-size: large; margin-bottom: 10px; border-bottom: 1px solid black; border-radius: 10px; padding-left: 25px; border-left: 1px solid black">
                         Najlepszy partner w nieruchomościach
@@ -100,7 +99,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12 custom-left-panel">
-                        <button class="btn btn-sm btn-danger" style="width: 100%">Dodaj bezpłatnie ofertę</button>
+                        <a role="button" class="btn btn-sm btn-danger" style="width: 100%" href="/Home/CreateOffer">Dodaj bezpłatnie ofertę</a>
                     </div>
                 </div>
                 <div class="row">
