--- a/Developer/Views/Admin/AdminMenu.cshtml
+++ b/Developer/Views/Admin/AdminMenu.cshtml
@@ -1,9 +1,9 @@
 ﻿<div class="row">
     <div class="col-md-2">
-        <button type="button" class="btn btn-success" style="width: 100%">
+        <a role="button" class="btn btn-success" style="width: 100%" href="/Admin/Messages">
             <span class="glyphicon glyphicon-envelope"></span>
             <small>Wiadomości</small>
-        </button>
+        </a>
     </div>
     <div class="col-md-2">
         <div class="dropdown">
