--- a/Developer/Views/Admin/Message.cshtml
+++ b/Developer/Views/Admin/Message.cshtml
@@ -1,11 +1,11 @@
 ﻿@using Developer.Models.ViewModels
 @using Microsoft.Ajax.Utilities
-@model Developer.Models.EntityModels.Offer
+@model Developer.Models.EntityModels.Mail
 
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
         @Html.Partial("AdminMenu")
-        <h4>Oferta nr @Model.Id</h4>
+        <h4>Wiadomość nr @Model.Id</h4>
         <div class="col-md-12">
 
             <div class="row">
@@ -21,7 +21,7 @@
                                 <div class="row" style="margin-bottom: 10px">
                                     <div class="col-md-6">
                                         <small>Imię i nazwisko:</small><br />
-                                        @String.Format("{0}",(Model.FullName.IsNullOrWhiteSpace())?"---":Model.FullName)
+                                        @String.Format("{0}", (Model.FullName.IsNullOrWhiteSpace()) ? "---" : Model.FullName)
                                     </div>
                                     <div class="col-md-6">
                                         <small>Email:</small><br />
@@ -47,22 +47,8 @@
                             <div class="panel-body">
                                 <div class="row" style="margin-bottom: 10px">
                                     <div class="col-md-6">
-                                        <small>Cena:</small><br />
-                                        @String.Format("{0}", (Model.Price.IsNullOrWhiteSpace()) ? "---" : Model.Price)
-                                    </div>
-                                    <div class="col-md-6">
-                                        <small>Nieruchomość:</small><br />
-                                        @Model.AdType
-                                    </div>
-                                </div>
-                                <div class="row" style="margin-bottom: 10px">
-                                    <div class="col-md-6">
-                                        <small>Miasto:</small><br />
-                                        @String.Format("{0}", (Model.City.IsNullOrWhiteSpace()) ? "---" : Model.City)
-                                    </div>
-                                    <div class="col-md-6">
-                                        <small>Lokalizacja:</small><br />
-                                        @String.Format("{0}", (Model.Location.IsNullOrWhiteSpace()) ? "---" : Model.Location)
+                                        <small>Link:</small><br />
+                                        @String.Format("{0}", (Model.OrderLink.IsNullOrWhiteSpace()) ? "---" : Model.OrderLink)
                                     </div>
                                 </div>
                             </div>
@@ -72,21 +58,21 @@
                         <div class="panel panel-warning">
                             <div class="panel-heading">
                                 <h3 class="panel-title">
-                                    Opis
+                                    Treść wiadomości
                                 </h3>
                             </div>
                             <div class="panel-body">
                                 <div class="row" style="margin-bottom: 10px">
                                     <div class="col-md-12">
-                                        @String.Format("{0}", (Model.Description.IsNullOrWhiteSpace()) ? "---" : Model.Description)
+                                        @String.Format("{0}", (Model.Body.IsNullOrWhiteSpace()) ? "---" : Model.Body)
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        @Html.ActionLink("Akceptuj", "Offer", new {status = OfferStatus.Accepted}, new {@class = "btn btn-success"})
-                        @Html.ActionLink("Odrzuć", "Offer", new {status = OfferStatus.Rejected}, new {@class = "btn btn-danger"})
+                        @Html.ActionLink("Akceptuj", "Offer", new { status = OfferStatus.Accepted }, new { @class = "btn btn-success" })
+                        @Html.ActionLink("Odrzuć", "Offer", new { status = OfferStatus.Rejected }, new { @class = "btn btn-danger" })
                     </div>
                 </div>
             </div>
