--- a/Developer/Views/Home/Index.cshtml
+++ b/Developer/Views/Home/Index.cshtml
@@ -4,8 +4,10 @@
 }
 <script src="~/Scripts/jquery-1.10.2.js"></script>
 <script src="~/Scripts/bootstrap.js"></script>
+    @Scripts.Render("~/bundles/angular")
+    @Scripts.Render("~/bundles/app")
 
-<div class="row" style="margin-right: 15px" data-ng-app="searcher" data-ng-controller="SearcherController">
+<div class="row" style="margin-right: 15px" ng-app="searcher" ng-controller="SearcherController">
     <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
         <h4>Wyszukaj ofertę</h4>
         <div class="row">
@@ -42,8 +44,15 @@
                     <option value="">Każda cena</option>
                 </select>
             </div>
-            <div class="row" style="margin-left: 15px;">
-                <button class="btn btn-sm btn-default" style="margin-top: 15px;" ng-click="clearFilters(myProperty.value)">Wyczyść filtry</button>
+            <div class="row">
+                <div class="col-md-4">
+                    <select class="form-control input-sm" style="margin-top: 15px;margin-left: 15px;" ng-model="mySort" ng-options="sort.name for sort in sorting">
+                        <option style="display: none" value="">Rodzaj sortowania</option>
+                    </select>
+                </div>
+                <div class="col-md-4"style="padding-left: 22px; padding-right: 22px;">
+                    <button class="btn btn-sm btn-default" style="margin-top: 15px; width: 100%" ng-click="clearFilters(myProperty.value)">Wyczyść filtry</button>
+                </div>
             </div>
         </div>
         @* FLATS *@
@@ -66,8 +75,15 @@
                     <option value="">Każda cena</option>
                 </select>
             </div>
-            <div class="row" style="margin-left: 15px;">
-                <button class="btn btn-sm btn-default" style="margin-top: 15px;"ng-click="clearFilters(myProperty.value)">Wyczyść filtry</button>
+            <div class="row">
+                <div class="col-md-4">
+                    <select class="form-control input-sm" style="margin-top: 15px;margin-left: 15px;" ng-model="mySort" ng-options="sort.name for sort in sorting">
+                        <option style="display: none" value="">Rodzaj sortowania</option>
+                    </select>
+                </div>
+                <div class="col-md-4"style="padding-left: 22px; padding-right: 22px;">
+                    <button class="btn btn-sm btn-default" style="margin-top: 15px; width: 100%" ng-click="clearFilters(myProperty.value)">Wyczyść filtry</button>
+                </div>
             </div>
         </div>
         @* LANDS *@
@@ -87,116 +103,138 @@
             <div class="col-md-4">
                 <small>Cena:</small>
                 <select class="form-control input-sm" ng-model="mylandPrice" ng-options="price.Price for price in landList|unique:'Price'|filter:mylandCity.City|filter:{Area:mylandArea.Area}">
-                    <option value="">Każda cena</option>
+                    <option style="display: none" value="">Każda cena</option>
                 </select>
             </div>
-            <div class="row" style="margin-left: 15px;">
-                <button class="btn btn-sm btn-default" style="margin-top: 15px;"ng-click="clearFilters(myProperty.value)">Wyczyść filtry</button>
+            <div class="row">
+                <div class="col-md-4">
+                    <select class="form-control input-sm" style="margin-top: 15px;margin-left: 15px;" ng-model="mySort" ng-options="sort.name for sort in sorting">
+                        <option value="">Rodzaj sortowania</option>
+                    </select>
+                </div>
+                <div class="col-md-4"style="padding-left: 22px; padding-right: 22px;">
+                    <button class="btn btn-sm btn-default" style="margin-top: 15px; width: 100%" ng-click="clearFilters(myProperty.value)">Wyczyść filtry</button>
+                </div>
             </div>
         </div>
     </div>
     @* LIST FLATS*@
-    <ul style="padding-left: 0px;" ng-show="myProperty.value =='flat'">
-        <li ng-repeat="flat in filteredflatList = (flatList|filter:{City:myflatCity.City}|filter:{ToLet:myoffertType.value}|filter:{Rooms:myflatRoom.Rooms}|filter:{Price:myflatPrice.Price})">
-            <div class="col-md-12 custom-left-panel" style="margin-left: 15px; padding-left: 0px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
-                <div class="col-md-3">
-                    <img ng-show="flat.Picture != null" ng-src="/Content/Photos/{{flat.Picture.Link}}" style="width: 100%" />
-                    <img ng-show="flat.Picture == null" ng-src="/Content/Photos/NoImageAvailable.jpg" style="width: 100%">
+    <div ng-show="myProperty.value =='flat'">
+        <ul style="padding-left: 0px;">
+            <li dir-paginate="flat in filteredflatList = (flatList|filter:{City:myflatCity.City}|filter:{ToLet:myoffertType.value}|filter:{Rooms:myflatRoom.Rooms}|filter:{Price:myflatPrice.Price}|orderBy:mySort.value:mySort.reverse)|itemsPerPage: pageSize:'flat'" current-page="currentPage" pagination-id="flat">
+                <div class="col-md-12 custom-left-panel" style="margin-left: 15px; padding-left: 0px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
+                    <div class="col-md-3">
+                        <img ng-show="flat.Picture != null" ng-src="/Content/Photos/{{flat.Picture.Link}}" style="width: 100%" />
+                        <img ng-show="flat.Picture == null" ng-src="/Content/Photos/NoImageAvailable.jpg" style="width: 100%">
+                    </div>
+                    <div class="col-md-9">
+                        <div class="row">
+                            <div class="col-md-12" style="border-bottom: 2px solid rgb(255, 227, 176); padding-left: 0px; padding-right: 0px; margin-bottom: 5px">
+                                <div class="pull-left" style="font-weight: bold">{{flat.Title}}</div>
+                                <div class="pull-right" style="font-weight: bolder; font-size: larger">{{flat.Price}}</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                {{flat.City}}, <small>{{flat.Rooms}}</small>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p style="font-size: small; text-align: justify; height: 60px; overflow: hidden">{{flat.Description}}</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-9">
-                    <div class="row">
-                        <div class="col-md-12" style="border-bottom: 2px solid rgb(255, 227, 176); padding-left: 0px; padding-right: 0px; margin-bottom: 5px">
-                            <div class="pull-left" style="font-weight: bold">{{flat.Title}}</div>
-                            <div class="pull-right" style="font-weight: bolder; font-size: larger">{{flat.Price}}</div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            {{flat.City}}, <small>{{flat.Rooms}}</small>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <p style="font-size: small; text-align: justify; height: 60px; overflow: hidden">{{flat.Description}}</p>
-                        </div>
-                    </div>
+            </li>
+            <li ng-show="!filteredflatList.length">
+                <div class="col-md-12 custom-left-panel" style="margin-left: 15px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
+                    <p style="font-weight: bold">Brak wyników</p>
                 </div>
-            </div>
-        </li>
-        <li ng-show="!filteredflatList.length">
-             <div class="col-md-12 custom-left-panel" style="margin-left: 15px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
-                <p  style="font-weight: bold">Brak wyników</p>
-            </div>
-        </li>
-    </ul>
+            </li>
+        </ul>
+        <div class="text-center">
+            <dir-pagination-controls pagination-id="flat" boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="/Scripts/app/dirPagination.tpl.html"></dir-pagination-controls>
+        </div>
+    </div>
     @* LIST HOUSES*@
-    <ul style="padding-left: 0px;" ng-show="myProperty.value =='house'">
-        <li ng-repeat="house in filteredhouseList = (houseList|filter:{City:myhouseCity.City}|filter:{ToLet:myofferType.value}|filter:{UsableArea:myhouseUsableArea.UsableArea}|filter:{Price:myhousePrice.Price})">
-            <div class="col-md-12 custom-left-panel" style="margin-left: 15px; padding-left: 0px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
-                <div class="col-md-3">
-                    <img ng-show="house.Picture != null" ng-src="/Content/Photos/{{house.Picture.Link}}" style="width: 100%"/>
-                    <img ng-show="house.Picture == null" ng-src="/Content/Photos/NoImageAvailable.jpg" style="width: 100%">
+    <div ng-show="myProperty.value =='house'">
+        <ul style="padding-left: 0px;">
+            <li dir-paginate="house in filteredhouseList = (houseList|filter:{City:myhouseCity.City}|filter:{ToLet:myofferType.value}|filter:{UsableArea:myhouseUsableArea.UsableArea}|filter:{Price:myhousePrice.Price}|orderBy:mySort.value:mySort.reverse)|itemsPerPage: pageSize:'house'" current-page="currentPage" pagination-id="house">
+                <div class="col-md-12 custom-left-panel" style="margin-left: 15px; padding-left: 0px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
+                    <div class="col-md-3">
+                        <img ng-show="house.Picture != null" ng-src="/Content/Photos/{{house.Picture.Link}}" style="width: 100%" />
+                        <img ng-show="house.Picture == null" ng-src="/Content/Photos/NoImageAvailable.jpg" style="width: 100%">
+                    </div>
+                    <div class="col-md-9">
+                        <div class="row">
+                            <div class="col-md-12" style="border-bottom: 2px solid rgb(255, 227, 176); padding-left: 0px; padding-right: 0px; margin-bottom: 5px">
+                                <div class="pull-left" style="font-weight: bold">{{house.Title}}</div>
+                                <div class="pull-right" style="font-weight: bolder; font-size: larger">{{house.Price}}</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                {{house.City}}, <small>{{house.UsableArea}}</small>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p style="font-size: small; text-align: justify; height: 60px; overflow: hidden">{{house.Description}}</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-9">
-                    <div class="row">
-                        <div class="col-md-12" style="border-bottom: 2px solid rgb(255, 227, 176); padding-left: 0px; padding-right: 0px; margin-bottom: 5px">
-                            <div class="pull-left" style="font-weight: bold">{{house.Title}}</div>
-                            <div class="pull-right" style="font-weight: bolder; font-size: larger">{{house.Price}}</div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            {{house.City}}, <small>{{house.UsableArea}}</small>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <p style="font-size: small; text-align: justify; height: 60px; overflow: hidden">{{house.Description}}</p>
-                        </div>
-                    </div>
+            </li>
+            <li ng-show="!filteredhouseList.length">
+                <div class="col-md-12 custom-left-panel" style="margin-left: 15px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
+                    <p style="font-weight: bold">Brak wyników</p>
                 </div>
-            </div>
-        </li>
-        <li ng-show="!filteredhouseList.length">
-             <div class="col-md-12 custom-left-panel" style="margin-left: 15px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
-                <p  style="font-weight: bold">Brak wyników</p>
-            </div>
-        </li>
-    </ul>
+            </li>
+        </ul>
+        <div class="text-center">
+            <dir-pagination-controls pagination-id="house" boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="/Scripts/app/dirPagination.tpl.html"></dir-pagination-controls>
+        </div>
+    </div>
     @* LIST LAND*@
-    <ul style="padding-left: 0px;" ng-show="myProperty.value =='land'">
-        <li ng-repeat="land in filteredlandList =(landList|filter:mylandCity.City|filter:{Area:mylandArea.Area}|filter:{Price:mylandPrice.Price})">
-            <div class="col-md-12 custom-left-panel" style="margin-left: 15px; padding-left: 0px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
-                <div class="col-md-3">
-                    <img ng-show="land.Picture != null" ng-src="/Content/Photos/{{land.Picture.Link}}" style="width: 100%"/>
-                    <img ng-show="land.Picture.Link == null" ng-src="/Content/Photos/NoImageAvailable.jpg" style="width: 100%">
+    <div ng-show="myProperty.value =='land'">
+        <ul style="padding-left: 0px;">
+            <li dir-paginate="land in filteredlandList =(landList|filter:mylandCity.City|filter:{Area:mylandArea.Area}|filter:{Price:mylandPrice.Price}|orderBy:mySort.value:mySort.reverse)|itemsPerPage: pageSize:'land'" current-page="currentPage" pagination-id="land">
+                <div class="col-md-12 custom-left-panel" style="margin-left: 15px; padding-left: 0px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
+                    <div class="col-md-3">
+                        <img ng-show="land.Picture != null" ng-src="/Content/Photos/{{land.Picture.Link}}" style="width: 100%" />
+                        <img ng-show="land.Picture.Link == null" ng-src="/Content/Photos/NoImageAvailable.jpg" style="width: 100%">
+                    </div>
+                    <div class="col-md-9">
+                        <div class="row">
+                            <div class="col-md-12" style="border-bottom: 2px solid rgb(255, 227, 176); padding-left: 0px; padding-right: 0px; margin-bottom: 5px">
+                                <div class="pull-left" style="font-weight: bold">{{land.Title}}</div>
+                                <div class="pull-right" style="font-weight: bolder; font-size: larger">{{land.Price}}</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                {{land.City}}, <small>{{land.Area}}</small>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p style="font-size: small; text-align: justify; height: 60px; overflow: hidden">{{land.Description}}</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-9">
-                    <div class="row">
-                        <div class="col-md-12" style="border-bottom: 2px solid rgb(255, 227, 176); padding-left: 0px; padding-right: 0px; margin-bottom: 5px">
-                            <div class="pull-left" style="font-weight: bold">{{land.Title}}</div>
-                            <div class="pull-right" style="font-weight: bolder; font-size: larger">{{land.Price}}</div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            {{land.City}}, <small>{{land.Area}}</small>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <p style="font-size: small; text-align: justify; height: 60px; overflow: hidden">{{land.Description}}</p>
-                        </div>
-                    </div>
+            </li>
+            <li ng-show="!filteredlandList.length">
+                <div class="col-md-12 custom-left-panel" style="margin-left: 15px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
+                    <p style="font-weight: bold">Brak wyników</p>
                 </div>
-            </div>
-        </li>
-        <li ng-show="!filteredlandList.length">
-             <div class="col-md-12 custom-left-panel" style="margin-left: 15px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
-                <p  style="font-weight: bold">Brak wyników</p>
-            </div>
-        </li>
-    </ul>
+            </li>
+        </ul>
+        <div class="text-center">
+            <dir-pagination-controls pagination-id="land" boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="/Scripts/app/dirPagination.tpl.html"></dir-pagination-controls>
+        </div>
+    </div>
 </div>
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
