--- a/Developer/Views/Home/Index.cshtml
+++ b/Developer/Views/Home/Index.cshtml
@@ -8,123 +8,130 @@
     @Scripts.Render("~/bundles/app")
 
 <div class="row" style="margin-right: 15px" ng-app="searcher" ng-controller="SearcherController">
-    <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
-        <h4>Wyszukaj ofertę</h4>
+<div class="col-md-12 custom-left-panel" style="margin-left: 15px">
+    <h4>Wyszukaj ofertę</h4>
+    <div class="row">
+        <div class="col-md-6" style="border-right: 1px solid black">
+            <small>Rodzaj nieruchomości: </small>
+            <select class="form-control input-sm" ng-model="myProperty" ng-options="property.name for property in properties" ng-change="loadResources(myProperty.value)">
+                <option style="display: none" value="">Wybierz rodzaj</option>
+            </select>
+        </div>
+        <div class="col-md-6" ng-hide="myProperty.value =='land'">
+            <small>Typ oferty :</small>
+            <select class="form-control input-sm" ng-model="myoffertType" ng-options="offert.name for offert in offertType">
+                <option style="display: none" value="">Wybierz rodzaj</option>
+            </select>
+        </div>
+    </div>
+    @* HOUSES *@
+    <div class="row" style="margin-top: 25px" ng-show="myProperty.value =='house'">
+        <div class="col-md-4">
+            <small>Miejscowość:</small>
+            <select class="form-control input-sm" ng-model="myhouseCity" ng-options="city.City for city in houseList">
+                <option value="">Wszystkie</option>
+            </select>
+        </div>
+        <div class="col-md-4">
+            <small>Ilość pokoi:</small>
+            <select class="form-control input-sm" ng-model="myhouseUsableArea" ng-options="usablearea.UsableArea for usablearea in houseList">
+                <option value="">Wszystkie powierzchnie</option>
+            </select>
+        </div>
+        <div class="col-md-4">
+            <small>Cena:</small>
+            <select class="form-control input-sm" ng-model="myhousePrice" ng-options="price.Price for price in houseList|unique:'Price'">
+                <option value="">Każda cena</option>
+            </select>
+        </div>
         <div class="row">
-            <div class="col-md-6" style="border-right: 1px solid black">
-                <small>Rodzaj nieruchomości: </small>
-                <select class="form-control input-sm" ng-model="myProperty" ng-options="property.name for property in properties" ng-change="loadResources(myProperty.value)">
-                    <option style="display: none" value="">Wybierz rodzaj</option>
-                </select>
-            </div>
-            <div class="col-md-6" ng-hide="myProperty.value =='land'">
-                <small>Typ oferty :</small>
-                <select class="form-control input-sm" ng-model="myoffertType" ng-options="offert.name for offert in offertType">
-                    <option style="display: none" value="">Wybierz rodzaj</option>
-                </select>
-            </div>
-        </div>
-        @* HOUSES *@
-        <div class="row" style="margin-top: 25px" ng-show="myProperty.value =='house'">
             <div class="col-md-4">
-                <small>Miejscowość:</small>
-                <select class="form-control input-sm" ng-model="myhouseCity" ng-options="city.City for city in houseList">
-                    <option value="">Wszystkie</option>
+                <select class="form-control input-sm" style="margin-top: 15px; margin-left: 15px;" ng-model="mySort" ng-options="sort.name for sort in sorting">
+                    <option style="display: none" value="">Rodzaj sortowania</option>
                 </select>
             </div>
-            <div class="col-md-4">
-                <small>Ilość pokoi:</small>
-                <select class="form-control input-sm" ng-model="myhouseUsableArea" ng-options="usablearea.UsableArea for usablearea in houseList">
-                    <option value="">Wszystkie powierzchnie</option>
-                </select>
-            </div>
-            <div class="col-md-4">
-                <small>Cena:</small>
-                <select class="form-control input-sm" ng-model="myhousePrice" ng-options="price.Price for price in houseList|unique:'Price'">
-                    <option value="">Każda cena</option>
-                </select>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <select class="form-control input-sm" style="margin-top: 15px;margin-left: 15px;" ng-model="mySort" ng-options="sort.name for sort in sorting">
-                        <option style="display: none" value="">Rodzaj sortowania</option>
-                    </select>
-                </div>
-                <div class="col-md-4"style="padding-left: 22px; padding-right: 22px;">
-                    <button class="btn btn-sm btn-default" style="margin-top: 15px; width: 100%" ng-click="clearFilters(myProperty.value)">Wyczyść filtry</button>
-                </div>
-            </div>
-        </div>
-        @* FLATS *@
-        <div class="row" style="margin-top: 25px" ng-show="myProperty.value =='flat'">
-            <div class="col-md-4">
-                <small>Miejscowość:</small>
-                <select class="form-control input-sm" ng-model="myflatCity" ng-options="city.City for city in flatList|unique:'City'|filter:{ToLet:myoffertType.value}|filter:{Rooms:myflatRoom.Rooms}|filter:{Price:myflatPrice.Price}">
-                    <option value="">Wszystkie</option>
-                </select>
-            </div>
-            <div class="col-md-4">
-                <small>Ilość pokoi:</small>
-                <select class="form-control input-sm" ng-model="myflatRoom" ng-options="room.Rooms for room in flatList|unique:'Rooms'|filter:{City:myflatCity.City}|filter:{ToLet:myoffertType.value}|filter:{Price:myflatPrice.Price}">
-                    <option value="">Każda ilość</option>
-                </select>
-            </div>
-            <div class="col-md-4">
-                <small>Cena:</small>
-                <select class="form-control input-sm" ng-model="myflatPrice" ng-options="price.Price for price in flatList|unique:'Price'|filter:{City:myflatCity.City}|filter:{ToLet:myoffertType.value}|filter:{Rooms:myflatRoom.Rooms}">
-                    <option value="">Każda cena</option>
-                </select>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <select class="form-control input-sm" style="margin-top: 15px;margin-left: 15px;" ng-model="mySort" ng-options="sort.name for sort in sorting">
-                        <option style="display: none" value="">Rodzaj sortowania</option>
-                    </select>
-                </div>
-                <div class="col-md-4"style="padding-left: 22px; padding-right: 22px;">
-                    <button class="btn btn-sm btn-default" style="margin-top: 15px; width: 100%" ng-click="clearFilters(myProperty.value)">Wyczyść filtry</button>
-                </div>
-            </div>
-        </div>
-        @* LANDS *@
-        <div class="row" style="margin-top: 25px" ng-show="myProperty.value =='land'">
-            <div class="col-md-4">
-                <small>Miejscowość:</small>
-                <select class="form-control input-sm" ng-model="mylandCity" ng-options="city.City for city in landList|unique:'City'|filter:{Area:mylandArea.Area}|filter:{Price:mylandPrice.Price}">
-                    <option value="">Wszystkie</option>
-                </select>
-            </div>
-            <div class="col-md-4">
-                <small>Powierzchnia:</small>
-                <select class="form-control input-sm" ng-model="mylandArea" ng-options="area.Area for area in landList|unique:'Area'|filter:mylandCity.City|filter:{Price:mylandPrice.Price}">
-                    <option value="">Wszystkie powierzchnie</option>
-                </select>
-            </div>
-            <div class="col-md-4">
-                <small>Cena:</small>
-                <select class="form-control input-sm" ng-model="mylandPrice" ng-options="price.Price for price in landList|unique:'Price'|filter:mylandCity.City|filter:{Area:mylandArea.Area}">
-                    <option style="display: none" value="">Każda cena</option>
-                </select>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <select class="form-control input-sm" style="margin-top: 15px;margin-left: 15px;" ng-model="mySort" ng-options="sort.name for sort in sorting">
-                        <option value="">Rodzaj sortowania</option>
-                    </select>
-                </div>
-                <div class="col-md-4"style="padding-left: 22px; padding-right: 22px;">
-                    <button class="btn btn-sm btn-default" style="margin-top: 15px; width: 100%" ng-click="clearFilters(myProperty.value)">Wyczyść filtry</button>
-                </div>
+            <div class="col-md-4"style="padding-left: 22px; padding-right: 22px;">
+                <button class="btn btn-sm btn-default" style="margin-top: 15px; width: 100%" ng-click="clearFilters(myProperty.value)">Wyczyść filtry</button>
             </div>
         </div>
     </div>
-    @* LIST FLATS*@
+    @* FLATS *@
+    <div class="row" style="margin-top: 25px" ng-show="myProperty.value =='flat'">
+        <div class="col-md-4">
+            <small>Miejscowość:</small>
+            <select class="form-control input-sm" ng-model="myflatCity" ng-options="city.City for city in flatList|unique:'City'|filter:{ToLet:myoffertType.value}|filter:{Rooms:myflatRoom.Rooms}|filter:{Price:myflatPrice.Price}">
+                <option value="">Wszystkie</option>
+            </select>
+        </div>
+        <div class="col-md-4">
+            <small>Ilość pokoi:</small>
+            <select class="form-control input-sm" ng-model="myflatRoom" ng-options="room.Rooms for room in flatList|unique:'Rooms'|filter:{City:myflatCity.City}|filter:{ToLet:myoffertType.value}|filter:{Price:myflatPrice.Price}">
+                <option value="">Każda ilość</option>
+            </select>
+        </div>
+        <div class="col-md-4">
+            <small>Cena:</small>
+            <select class="form-control input-sm" ng-model="myflatPrice" ng-options="price.Price for price in flatList|unique:'Price'|filter:{City:myflatCity.City}|filter:{ToLet:myoffertType.value}|filter:{Rooms:myflatRoom.Rooms}">
+                <option value="">Każda cena</option>
+            </select>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <select class="form-control input-sm" style="margin-top: 15px; margin-left: 15px;" ng-model="mySort" ng-options="sort.name for sort in sorting">
+                    <option style="display: none" value="">Rodzaj sortowania</option>
+                </select>
+            </div>
+            <div class="col-md-4"style="padding-left: 22px; padding-right: 22px;">
+                <button class="btn btn-sm btn-default" style="margin-top: 15px; width: 100%" ng-click="clearFilters(myProperty.value)">Wyczyść filtry</button>
+            </div>
+        </div>
+    </div>
+    @* LANDS *@
+    <div class="row" style="margin-top: 25px" ng-show="myProperty.value =='land'">
+        <div class="col-md-4">
+            <small>Miejscowość:</small>
+            <select class="form-control input-sm" ng-model="mylandCity" ng-options="city.City for city in landList|unique:'City'|filter:{Area:mylandArea.Area}|filter:{Price:mylandPrice.Price}">
+                <option value="">Wszystkie</option>
+            </select>
+        </div>
+        <div class="col-md-4">
+            <small>Powierzchnia:</small>
+            <select class="form-control input-sm" ng-model="mylandArea" ng-options="area.Area for area in landList|unique:'Area'|filter:mylandCity.City|filter:{Price:mylandPrice.Price}">
+                <option value="">Wszystkie powierzchnie</option>
+            </select>
+        </div>
+        <div class="col-md-4">
+            <small>Cena:</small>
+            <select class="form-control input-sm" ng-model="mylandPrice" ng-options="price.Price for price in landList|unique:'Price'|filter:mylandCity.City|filter:{Area:mylandArea.Area}">
+                <option style="display: none" value="">Każda cena</option>
+            </select>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <select class="form-control input-sm" style="margin-top: 15px; margin-left: 15px;" ng-model="mySort" ng-options="sort.name for sort in sorting">
+                    <option value="">Rodzaj sortowania</option>
+                </select>
+            </div>
+            <div class="col-md-4"style="padding-left: 22px; padding-right: 22px;">
+                <button class="btn btn-sm btn-default" style="margin-top: 15px; width: 100%" ng-click="clearFilters(myProperty.value)">Wyczyść filtry</button>
+            </div>
+        </div>
+    </div>
+</div>
+    <div class="col-md-12" style="margin-left: 15px; padding-left: 0px" hidden id="spinner">
+        <div class="spinner">
+            <div class="dot1"></div>
+            <div class="dot2"></div>
+        </div>
+    </div> 
+
+@* LIST FLATS*@
     <div ng-show="myProperty.value =='flat'">
         <ul style="padding-left: 0px;">
             <li dir-paginate="flat in filteredflatList = (flatList|filter:{City:myflatCity.City}|filter:{ToLet:myoffertType.value}|filter:{Rooms:myflatRoom.Rooms}|filter:{Price:myflatPrice.Price}|orderBy:mySort.value:mySort.reverse)|itemsPerPage: pageSize:'flat'" current-page="currentPage" pagination-id="flat">
                 <div class="col-md-12 custom-left-panel" style="margin-left: 15px; padding-left: 0px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
                     <div class="col-md-3">
-                        <img ng-show="flat.Picture != null" ng-src="/Content/Photos/{{flat.Picture.Link}}" style="width: 100%" />
+                        <img ng-show="flat.Picture != null" ng-src="/Content/Photos/{{flat.Picture.Link}}" style="width: 100%"/>
                         <img ng-show="flat.Picture == null" ng-src="/Content/Photos/NoImageAvailable.jpg" style="width: 100%">
                     </div>
                     <div class="col-md-9">
@@ -147,11 +154,14 @@
                     </div>
                 </div>
             </li>
-            <li ng-show="!filteredflatList.length">
-                <div class="col-md-12 custom-left-panel" style="margin-left: 15px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
-                    <p style="font-weight: bold">Brak wyników</p>
-                </div>
-            </li>
+            @*<li ng-show="!filteredflatList.length">
+                <div class="col-md-12" style="margin-left: 15px; padding-left: 0px" hidden>
+                    <div class="spinner">
+                        <div class="dot1"></div>
+                        <div class="dot2"></div>
+                    </div>
+                </div> 
+            </li>*@
         </ul>
         <div class="text-center">
             <dir-pagination-controls pagination-id="flat" boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="/Scripts/app/dirPagination.tpl.html"></dir-pagination-controls>
@@ -163,7 +173,7 @@
             <li dir-paginate="house in filteredhouseList = (houseList|filter:{City:myhouseCity.City}|filter:{ToLet:myofferType.value}|filter:{UsableArea:myhouseUsableArea.UsableArea}|filter:{Price:myhousePrice.Price}|orderBy:mySort.value:mySort.reverse)|itemsPerPage: pageSize:'house'" current-page="currentPage" pagination-id="house">
                 <div class="col-md-12 custom-left-panel" style="margin-left: 15px; padding-left: 0px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
                     <div class="col-md-3">
-                        <img ng-show="house.Picture != null" ng-src="/Content/Photos/{{house.Picture.Link}}" style="width: 100%" />
+                        <img ng-show="house.Picture != null" ng-src="/Content/Photos/{{house.Picture.Link}}" style="width: 100%"/>
                         <img ng-show="house.Picture == null" ng-src="/Content/Photos/NoImageAvailable.jpg" style="width: 100%">
                     </div>
                     <div class="col-md-9">
@@ -202,7 +212,7 @@
             <li dir-paginate="land in filteredlandList =(landList|filter:mylandCity.City|filter:{Area:mylandArea.Area}|filter:{Price:mylandPrice.Price}|orderBy:mySort.value:mySort.reverse)|itemsPerPage: pageSize:'land'" current-page="currentPage" pagination-id="land">
                 <div class="col-md-12 custom-left-panel" style="margin-left: 15px; padding-left: 0px; border: 2px solid rgb(255, 227, 176); background-color: rgb(255, 245, 227)">
                     <div class="col-md-3">
-                        <img ng-show="land.Picture != null" ng-src="/Content/Photos/{{land.Picture.Link}}" style="width: 100%" />
+                        <img ng-show="land.Picture != null" ng-src="/Content/Photos/{{land.Picture.Link}}" style="width: 100%"/>
                         <img ng-show="land.Picture.Link == null" ng-src="/Content/Photos/NoImageAvailable.jpg" style="width: 100%">
                     </div>
                     <div class="col-md-9">
