--- a/Developer/Views/Admin/Offers.cshtml
+++ b/Developer/Views/Admin/Offers.cshtml
@@ -56,7 +56,7 @@
                                 <td style="vertical-align:middle">@ad.City</td>
                                 <td style="vertical-align: middle">
                                     <a href="/Admin/Offer/@ad.Id">
-                                        <button class="btn btn-sm">
+                                        <button class="btn btn-xs">
                                             <span class="glyphicon glyphicon-search"></span>
                                         </button>
                                     </a>
