--- a/Developer/Views/Home/Index.cshtml
+++ b/Developer/Views/Home/Index.cshtml
@@ -137,7 +137,7 @@
                     <div class="col-md-9">
                         <div class="row">
                             <div class="col-md-12" style="border-bottom: 2px solid rgb(255, 227, 176); padding-left: 0px; padding-right: 0px; margin-bottom: 5px">
-                                <div class="pull-left" style="font-weight: bold">{{flat.Title}}</div>
+                                <div class="pull-left" style="font-weight: bold"><a href="/Home/Show?id={{flat.Id}}&adType=flat">{{flat.Title}}</a></div>
                                 <div class="pull-right" style="font-weight: bolder; font-size: larger">{{flat.Price}}</div>
                             </div>
                         </div>
@@ -179,7 +179,7 @@
                     <div class="col-md-9">
                         <div class="row">
                             <div class="col-md-12" style="border-bottom: 2px solid rgb(255, 227, 176); padding-left: 0px; padding-right: 0px; margin-bottom: 5px">
-                                <div class="pull-left" style="font-weight: bold">{{house.Title}}</div>
+                                <div class="pull-left" style="font-weight: bold"><a href="/Home/Show?id={{house.Id}}&adType=house">{{house.Title}}</a></div>
                                 <div class="pull-right" style="font-weight: bolder; font-size: larger">{{house.Price}}</div>
                             </div>
                         </div>
@@ -218,7 +218,7 @@
                     <div class="col-md-9">
                         <div class="row">
                             <div class="col-md-12" style="border-bottom: 2px solid rgb(255, 227, 176); padding-left: 0px; padding-right: 0px; margin-bottom: 5px">
-                                <div class="pull-left" style="font-weight: bold">{{land.Title}}</div>
+                                <div class="pull-left" style="font-weight: bold"><a href="/Home/Show?id={{land.Id}}&adType=land">{{land.Title}}</a></div>
                                 <div class="pull-right" style="font-weight: bolder; font-size: larger">{{land.Price}}</div>
                             </div>
                         </div>
