--- a/Developer/Views/Home/_ShowLand.cshtml
+++ b/Developer/Views/Home/_ShowLand.cshtml
@@ -34,7 +34,7 @@
                     <div class="list-group-item-info" style="margin-bottom: 3px; padding-left: 15px">
                         <div class="row" style="font-size: large">
                             <div class="col-md-5">Typ oferty:</div>
-                            <div class="col-md-7">@(Model.ToLet ? "Wynajem" : "Sprzedaż")</div>
+                            <div class="col-md-7">Sprzedaż</div>
                         </div>
                     </div>
                     @OwnHelpers.PropertyNotNull("Miasto", @Model.City)
