--- a/Developer/Views/Admin/AdList.cshtml
+++ b/Developer/Views/Admin/AdList.cshtml
@@ -6,70 +6,75 @@
         @Html.Partial("AdminMenu")
         @if (HttpContext.Current.Request.Params.Get("changed") == "True")
         {
-            <div class="alert alert-dismissable alert-info" style="margin: 10px">
-                <button type="button" class="close" data-dismiss="alert">×</button>
-                @{
             var hide = HttpContext.Current.Request.Params.Get("hide");
             if (hide == "True")
             {
-                <div>
-                    <strong>Ogłoszenie zostało ukryte!</strong><br />
-                    Od tej pory nie będzie widoczne na liście nieruchomości.
+                <div class="alert alert-dismissable alert-default" style="margin: 10px; background-color: #798d8f; border-color: #74898a; color:white">
+                    <button type="button" class="close" data-dismiss="alert">×</button>
+                    <div>
+                        <strong>Ogłoszenie zostało ukryte!</strong><br />
+                        Od tej pory nie będzie widoczne na liście nieruchomości.
+                    </div>
                 </div>
             }
             else
             {
-                <div>
-                    <strong>Ogłoszenie zostało odkryte!</strong><br />
-                    Od tej pory będzie widoczne na liście nieruchomości.
+                <div class="alert alert-dismissable alert-info" style="margin: 10px">
+                    <button type="button" class="close" data-dismiss="alert">×</button>
+                    <div>
+                        <strong>Ogłoszenie zostało odkryte!</strong><br />
+                        Od tej pory będzie widoczne na liście nieruchomości.
+                    </div>
                 </div>
             }
-                }
 
-            </div>
         }
         <h4>Lista nieruchomości</h4>
         <div class="row">
             <div class="col-md-12" style="font-size: small">
                 <table class="table table-striped">
                     <thead>
-                        <tr>
-                            <th>
-                                Typ
-                            </th>
-                            <th>
-                                Tytuł
-                            </th>
-                            <th>
-                                Miasto
-                            </th>
-                            <th>
-                                Osoba prowadząca
-                            </th>
-                            <th></th>
-                            <th>Pokaż/Ukryj</th>
-                        </tr>
+                    <tr>
+                        <th>
+                            Data dodania
+                        </th>
+                        <th>
+                            Typ
+                        </th>
+                        <th>
+                            Tytuł
+                        </th>
+                        <th>
+                            Miasto
+                        </th>
+                        <th>
+                            Osoba prowadząca
+                        </th>
+                        <th></th>
+                        <th>Pokaż/Ukryj</th>
+                    </tr>
                     </thead>
                     <tbody>
                         @foreach (var ad in Model)
                         {
                             <tr style="@((!ad.Visible) ? "background-color: black; color:white" : "")">
+                                <td>@ad.CreatedAt.ToShortDateString()</td>
                                 <td>@ad.AdType</td>
                                 <td>@ad.Title</td>
                                 <td>@ad.City</td>
                                 <td>@ad.Worker.FullName</td>
                                 <td style="text-align: center">
-                                    @Html.ActionLink("Info", "Show", "Home", new { id = ad.Id, adType = ad.AdType }, new { @class = "btn btn-success btn-xs" })
-                                    @Html.ActionLink("Edytuj", "EditAd", "Admin", new { id = ad.Id, adType = ad.AdType }, new { @class = "btn btn-danger btn-xs" })
+                                    @Html.ActionLink("Info", "Show", "Home", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-success btn-xs"})
+                                    @Html.ActionLink("Edytuj", "EditAd", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-danger btn-xs"})
                                 </td>
                                 <td style="text-align: center">
                                     @if (ad.Visible)
                                     {
-                                        @Html.ActionLink("Ukryj", "Hide", "Admin", new { id = ad.Id, adType = ad.AdType }, new { @class = "btn btn-default btn-xs" })
+                                        @Html.ActionLink("Ukryj", "Hide", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-default btn-xs"})
                                     }
                                     else
                                     {
-                                        @Html.ActionLink("Pokaż", "Hide", "Admin", new { id = ad.Id, adType = ad.AdType }, new { @class = "btn btn-info btn-xs" })
+                                        @Html.ActionLink("Pokaż", "Hide", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-info btn-xs"})
                                     }
                                 </td>
                             </tr>
